--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,19 +16,22 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="50pt"
         android:background="@drawable/ic_sena"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:contentDescription="@string/logo_sena"/>
 
     <EditText
-        android:id="@+id/etDocumento"
+        android:id="@+id/etEmail"
         android:layout_width="350dp"
         android:layout_height="50dp"
+        android:text="@string/txtcorreo_electronico"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="30pt"
+        android:textColorHint="@color/txt_color"
         android:textColor="@color/black"
-        android:hint="@string/documento"
+        android:hint="@string/txtcorreo_electronico"
         android:fontFamily="@font/poppins"
-
-        android:inputType="text" />
+        android:inputType="textEmailAddress"
+        android:autofillHints="emailAddress"/>
 
     <FrameLayout
         android:layout_width="350dp"
@@ -44,7 +47,9 @@
             android:inputType="textPassword"
             android:fontFamily="@font/poppins"
             android:textColor="@color/black"
-            android:paddingEnd="50dp" />
+            android:textColorHint="@color/txt_color"
+            android:paddingEnd="50dp"
+            android:autofillHints="password"/>
 
         <ImageView
             android:id="@+id/ivVerContra"
@@ -52,7 +57,8 @@
             android:layout_height="24dp"
             android:layout_gravity="end|center_vertical"
             android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_ojo" />
+            android:contentDescription="@string/verContra"
+            android:src="@drawable/ic_ojo_cerrado" />
     </FrameLayout>
 
     <Button
