--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorBtns">#00AF00</color>
+    <color name="btn_sena">#00AF00</color>
+    <color name="txt_color">#7A7A7A</color>
 </resources>
