--- a/app/src/main/res/layout/activity_cambiar_contrasena.xml
+++ b/app/src/main/res/layout/activity_cambiar_contrasena.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
+    android:background="@android:color/white"
     tools:context=".CambiarContrasena">
 
     <TextView
@@ -16,10 +17,13 @@
         android:textSize="35sp"
         android:textStyle="bold"
         android:textColor="#000000"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
     <TextView
         android:id="@+id/tvDescripcion"
@@ -29,6 +33,8 @@
         android:textSize="20sp"
         android:textColor="#777777"
         android:layout_marginTop="8dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintTop_toBottomOf="@id/tvTitulo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -39,9 +45,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:backgroundTint="#CCCCCC"
+        android:textColor="@color/black"
+        android:textColorHint="@color/txt_color"
         android:hint="@string/contra"
         android:inputType="textPassword"
         android:autofillHints="off"
+        android:fontFamily="@font/poppins"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,8 +65,13 @@
         android:hint="@string/conf_contra"
         android:inputType="textPassword"
         android:backgroundTint="#CCCCCC"
+        android:fontFamily="@font/poppins"
+        android:textColor="@color/black"
+        android:textColorHint="@color/txt_color"
         android:layout_marginTop="40dp"
         android:autofillHints="off"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="25dp"
         app:layout_constraintTop_toBottomOf="@id/etContrasena"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -68,7 +84,9 @@
         android:textStyle="bold"
         android:textColor="#FFFFFF"
         android:backgroundTint="#00C000"
-        android:layout_marginBottom="32dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toTopOf="@+id/etConfirmarContrasena"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
