--- a/app/src/main/res/layout/activity_rccorreo_enviado.xml
+++ b/app/src/main/res/layout/activity_rccorreo_enviado.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="48dp" />
+        android:layout_marginTop="110dp" />
 
     <!-- Título -->
     <TextView
@@ -63,6 +63,8 @@
         app:layout_constraintTop_toBottomOf="@id/tvMensajeRecuperacion"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginTop="32dp" />
 
     <!-- Texto de reenvío -->
@@ -83,9 +85,13 @@
         android:id="@+id/tvClickAqui"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:focusable="true"
         android:text="@string/txt_clickaqui"
+        android:textColor="@color/black"
         android:textSize="14sp"
         android:textStyle="bold"
+        android:contextClickable="true"
+        android:clickable="true"
         app:layout_constraintTop_toBottomOf="@id/tvReenviarInstruccion"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
