--- a/app/src/main/res/layout/activity_recuperar_contrasena.xml
+++ b/app/src/main/res/layout/activity_recuperar_contrasena.xml
@@ -17,7 +17,9 @@
         android:orientation="horizontal"
         android:gravity="center_vertical"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="10dp"
+
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
@@ -28,13 +30,6 @@
             android:src="@drawable/ic_flecha_volver"
             android:contentDescription="@string/txtVolver" />
 
-        <TextView
-            android:id="@+id/tvVolver"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/txtVolver"
-            android:textSize="22sp"
-            android:layout_marginStart="8dp" />
     </LinearLayout>
 
     <!-- Título -->
@@ -43,13 +38,16 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/txtRecuperarContrasena"
-        android:textSize="35sp"
+        android:textSize="32sp"
         android:textStyle="bold"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="15dp"
         android:textColor="@android:color/black"
+        app:layout_constraintTop_toTopOf="@id/layoutVolver"
         app:layout_constraintTop_toBottomOf="@id/layoutVolver"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="45dp" />
+        android:layout_marginTop="120dp" />
 
     <!-- Instrucciones -->
     <TextView
@@ -57,9 +55,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/txtRecuperarcontrasena"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textColor="@color/txt_color"
-        android:textStyle=""
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="15dp"
         app:layout_constraintTop_toBottomOf="@id/tvTitulo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,6 +88,10 @@
         android:hint="@string/txtcorreo_electronico"
         android:inputType="textEmailAddress"
         android:textSize="16sp"
+        android:padding="20dp"
+        android:fontFamily="@font/poppins"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:textColor="@color/black"
         android:textColorHint="@color/txt_color"
         android:autofillHints="emailAddress"
@@ -107,9 +110,11 @@
         android:backgroundTint="@color/btn_sena"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="90dp" />
+        app:layout_constraintTop_toTopOf="@id/etCorreoElectronico"
+        app:layout_constraintStart_toStartOf="@id/etCorreoElectronico"
+        app:layout_constraintEnd_toEndOf="@id/etCorreoElectronico"
+        android:layout_marginBottom="120dp"
+/>
 
 
 
