--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorBtns">#00AF00</color>
     <color name="btn_sena">#00AF00</color>
     <color name="txt_color">#7A7A7A</color>
+    <color name="colorBtnCancela">#A6A6A6</color>
 </resources>
