Agregando front de la vista principal

--- a/app/src/main/res/layout/activity_reservas_instru.xml
+++ b/app/src/main/res/layout/activity_reservas_instru.xml
@@ -57,7 +57,7 @@
         android:padding="8dp"
         android:clipToPadding="false"
         android:scrollbars="horizontal"
-        tools:listitem="@layout/activity_ambientes">
+        tools:listitem="@layout/item_vistappal">
 
     </androidx.recyclerview.widget.RecyclerView>
 
