--- a/app/src/main/res/layout/item_vistappal.xml
+++ b/app/src/main/res/layout/item_vistappal.xml
@@ -16,11 +16,15 @@
         android:textSize="24sp"/>
 
     <LinearLayout
-        android:layout_width="410dp"
-        android:layout_height="200dp"
+        android:id="@+id/lyAmbientesPpal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="15dp"
-        android:padding="10dp">
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:padding="20dp"
+        android:background="@drawable/borde_vistappal">
 
         <ImageView
             android:id="@+id/imagenAmbiente1"
@@ -48,11 +52,16 @@
         android:textSize="24sp"/>
 
     <LinearLayout
-        android:layout_width="410dp"
-        android:layout_height="200dp"
+        android:id="@+id/lyEquiposComputoPpal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="15dp"
-        android:padding="10dp">
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:padding="20dp"
+        android:background="@drawable/borde_vistappal"
+        >
 
         <ImageView
             android:id="@+id/imagen1"
