--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,81 +9,90 @@
     android:background="@color/white"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/tvSena"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="50pt"
-        android:background="@drawable/ic_sena"
-        android:textColor="@color/black"
-        android:contentDescription="@string/logo_sena"/>
-
-    <EditText
-        android:id="@+id/etEmail"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="30pt"
-        android:textColorHint="@color/txt_color"
-        android:textColor="@color/black"
-        android:hint="@string/txtcorreo_electronico"
-        android:inputType="textEmailAddress"
-        android:fontFamily="@font/poppins"
-        android:autofillHints="emailAddress"/>
-
-    <FrameLayout
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="10pt">
-
-        <EditText
-            android:id="@+id/etContra"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/contra"
-            android:inputType="textPassword"
-            android:fontFamily="@font/poppins"
-            android:textColor="@color/black"
-            android:textColorHint="@color/txt_color"
-            android:paddingEnd="50dp"
-            android:autofillHints="password"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="16dp">
 
         <ImageView
-            android:id="@+id/ivVerContra"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="end|center_vertical"
-            android:layout_marginEnd="10dp"
-            android:contentDescription="@string/verContra"
-            android:src="@drawable/ic_ojo_cerrado" />
-    </FrameLayout>
+            android:id="@+id/tvSena"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginBottom="24dp"
+            android:background="@drawable/ic_sena"
+            android:contentDescription="@string/logo_sena"/>
 
-    <Button
-        android:id="@+id/btnIniciar"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="20pt"
-        android:backgroundTint="@color/colorBtns"
-        android:text="@string/inicioSesion"
-        android:fontFamily="@font/poppins"
-        android:textColor="@color/white" />
+        <EditText
+            android:id="@+id/etEmail"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="16dp"
+            android:textColorHint="@color/txt_color"
+            android:textColor="@color/black"
+            android:hint="@string/txtcorreo_electronico"
+            android:inputType="textEmailAddress"
+            android:fontFamily="@font/poppins"
+            android:autofillHints="emailAddress"
+            android:paddingHorizontal="12dp"/>
 
-    <TextView
-        android:id="@+id/tvOlvidaste"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="5pt"
-        android:background="@color/white"
-        android:textStyle="italic"
-        android:text="@string/olvidaste"
-        android:textAlignment="textEnd"
-        android:textColor="@color/black"
-        android:contextClickable="true"
-        android:textSize="15sp" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="8dp">
+
+            <EditText
+                android:id="@+id/etContra"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/contra"
+                android:inputType="textPassword"
+                android:fontFamily="@font/poppins"
+                android:textColor="@color/black"
+                android:textColorHint="@color/txt_color"
+                android:paddingStart="12dp"
+                android:paddingEnd="50dp"
+                android:autofillHints="password"/>
+
+            <ImageView
+                android:id="@+id/ivVerContra"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="end|center_vertical"
+                android:layout_marginEnd="12dp"
+                android:contentDescription="@string/verContra"
+                android:src="@drawable/ic_ojo_cerrado" />
+        </FrameLayout>
+
+        <Button
+            android:id="@+id/btnIniciar"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="@color/colorBtns"
+            android:text="@string/inicioSesion"
+            android:fontFamily="@font/poppins"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/tvOlvidaste"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="4dp"
+            android:background="@color/white"
+            android:textStyle="italic"
+            android:text="@string/olvidaste"
+            android:textAlignment="textEnd"
+            android:textColor="@color/black"
+            android:clickable="true"
+            android:focusable="true"
+            android:textSize="15sp" />
+
+    </LinearLayout>
 </LinearLayout>
-
 
