--- a/app/src/main/res/layout/activity_solicitud_reservas.xml
+++ b/app/src/main/res/layout/activity_solicitud_reservas.xml
@@ -3,17 +3,21 @@
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:id="@+id/mainlySolicitudReservas"
     android:background="@android:color/white"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".SolicitudReservas"
+    android:gravity="center">
 
+<!--        android:layout_marginStart="100dp"-->
+<!--        android:layout_marginEnd="15dp"-->
 
     <TextView
         android:id="@+id/tvTitulo"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="50dp"
         android:text="@string/txtSolicitudReservas"
         android:textAlignment="center"
         android:textColor="@android:color/black"
@@ -24,8 +28,9 @@
         android:id="@+id/tvNombreAmbiente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
+        android:layout_gravity="start"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="25dp"
         android:text="@string/nombreAmbiente"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -37,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
         android:layout_marginTop="15dp"
+        android:layout_gravity="start"
         android:textColor="@color/txt_color"
         android:textSize="28sp"/>
 
@@ -46,6 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="15dp"
+        android:layout_gravity="start"
         android:text="@string/SolicitadoPor"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -57,6 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
         android:layout_marginTop="15dp"
+        android:layout_gravity="start"
         android:textColor="@color/txt_color"
         android:textSize="28sp"/>
 
@@ -66,6 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="15dp"
+        android:layout_gravity="start"
         android:text="@string/fecha"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -78,6 +87,7 @@
         android:layout_marginHorizontal="100dp"
         android:layout_marginTop="5pt"
         android:textAlignment="center"
+        android:layout_gravity="start"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_calendario"
         android:textColor="@color/white" />
@@ -88,6 +98,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="10dp"
+        android:layout_gravity="start"
         android:text="@string/jornada"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -99,7 +110,8 @@
         android:layout_height="50dp"
         android:layout_marginHorizontal="10dp"
         android:layout_marginStart="55dp"
-        android:layout_marginTop="5pt">
+        android:layout_marginTop="5pt"
+        android:layout_gravity="start">
 
         <CheckBox
             android:id="@+id/checkMañana"
@@ -131,7 +143,11 @@
             android:buttonTint="@color/btn_sena" />
     </LinearLayout>
 
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_marginBottom="20dp">
     <ImageButton
         android:id="@+id/btnCancelar"
         android:layout_width="70dp"
@@ -149,9 +165,11 @@
         android:layout_height="70dp"
         android:layout_marginHorizontal="300dp"
         android:layout_marginTop="-70dp"
+        android:layout_gravity="start"
         android:backgroundTint="@color/colorBtns"
-        android:textAlignment="center"
+        android:layout_marginBottom="20dp"
         android:src="@drawable/ic_guardar"
         android:textColor="@color/white" />
+</LinearLayout>
 
 </LinearLayout>
