--- a/app/src/main/res/layout/menu_lateral.xml
+++ b/app/src/main/res/layout/menu_lateral.xml
@@ -13,9 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-
-        android:gravity="center_vertical"
-        android:layout_marginBottom="8dp">
+        android:gravity="center"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="20dp">
 
 
 
@@ -50,7 +50,7 @@
             android:id="@+id/ivUserIcon"
             android:layout_width="104dp"
             android:layout_height="104dp"
-
+            android:layout_marginStart="40dp"
             android:layout_marginEnd="12dp"
             android:contentDescription="Icono de usuario"
             android:src="@drawable/ic_user" />
@@ -62,6 +62,8 @@
         android:layout_height="1dp"
         android:background="@color/txt_color"
         android:layout_marginTop="16dp"
-        android:alpha="0.3" />
+        android:alpha="0.3"
+        />
+
 
 </LinearLayout>
