--- a/app/src/main/res/layout/activity_rccorreo_enviado.xml
+++ b/app/src/main/res/layout/activity_rccorreo_enviado.xml
@@ -49,23 +49,43 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp" />
 
-    <!-- Botón Abrir Gmail -->
-    <Button
-        android:id="@+id/btnAbrirGmail"
+    <!-- EditText de correo -->
+    <EditText
+        android:id="@+id/etToken"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/txtabrirgmail"
+        android:hint="@string/txt_VerificarToken"
+        android:inputType="textEmailAddress"
+        android:textSize="16sp"
+        android:padding="20dp"
+        android:fontFamily="@font/poppins"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/txt_color"
+        android:autofillHints="emailAddress"
+        app:layout_constraintTop_toBottomOf="@id/tvMensajeRecuperacion"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp" />
+
+    <!-- Botón Abrir Gmail -->
+    <Button
+        android:id="@+id/btnVerificar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/txt_VerificarToken"
         android:textAllCaps="false"
         android:backgroundTint="#00AF00"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         android:padding="12dp"
-        app:layout_constraintTop_toBottomOf="@id/tvMensajeRecuperacion"
+        app:layout_constraintTop_toBottomOf="@id/etToken"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginTop="32dp" />
+        android:layout_marginTop="24dp" />
 
     <!-- Texto de reenvío -->
     <TextView
@@ -75,7 +95,7 @@
         android:text="@string/txt_reenviarinstruccion"
         android:textSize="14sp"
         android:textColor="#666666"
-        app:layout_constraintTop_toBottomOf="@id/btnAbrirGmail"
+        app:layout_constraintTop_toBottomOf="@id/btnVerificar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="24dp" />
