--- a/app/src/main/res/layout/activity_solicitud_reservas.xml
+++ b/app/src/main/res/layout/activity_solicitud_reservas.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@android:color/white"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/mainlySolicitudReservas">
 
 
     <TextView
