--- a/app/src/main/res/layout/activity_perfil_aprendiz_instru.xml
+++ b/app/src/main/res/layout/activity_perfil_aprendiz_instru.xml
@@ -3,8 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/mainlyPerfilAprendizInstru"
     android:background="@android:color/white"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".PerfilAprendizInstru">
 
 
     <ImageView
