--- a/app/src/main/res/layout/activity_quejas_novedades.xml
+++ b/app/src/main/res/layout/activity_quejas_novedades.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@android:color/white"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/mainlyQuejasNovedades"
+    tools:context=".QuejasNovedades">
 
 
     <TextView
@@ -52,13 +54,16 @@
         android:textSize="24sp"/>
 
     <EditText
-        android:id="@+id/etEmail"
+        android:id="@+id/etDescripcion"
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="20dp"
         android:textColorHint="@color/txt_color"
+        android:shadowColor="@color/black"
+        android:textSize="18dp"
         android:textColor="@color/black"
+        android:hint="Describe tu queja aquí ..."
         android:inputType="textEmailAddress"
         android:fontFamily="@font/poppins"
         android:autofillHints="emailAddress"/>
