--- a/app/src/main/res/menu/menu_opciones.xml
+++ b/app/src/main/res/menu/menu_opciones.xml
@@ -13,7 +13,8 @@
 
     <item android:id="@+id/nav_perfil"
         android:title="Perfil" />
-
+    <item android:id="@+id/nav_crear_equipo"
+        android:title="Crear equipo" />
     <item android:id="@+id/nav_cerrar_Sesion"
         android:title="Cerrar sesion" />
 
