--- a/app/src/main/res/layout/activity_crear_ambiente.xml
+++ b/app/src/main/res/layout/activity_crear_ambiente.xml
@@ -8,6 +8,15 @@
     android:id="@+id/mainlyCrearAmbiente"
     tools:context=".CrearAmbiente">
 
+    <ImageButton
+        android:background="@android:color/transparent"
+        android:id="@+id/ibVolver"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/ic_flecha_volver"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:contentDescription="@string/txtVolver" />
 
     <TextView
         android:id="@+id/tvTitulo"
@@ -100,7 +109,7 @@
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="20pt"
+        android:layout_marginTop="10pt"
         android:backgroundTint="@color/colorBtns"
         android:text="@string/txtCrearAmbiente"
         android:fontFamily="@font/poppins"
