--- a/app/src/main/res/layout/item_vistappal.xml
+++ b/app/src/main/res/layout/item_vistappal.xml
@@ -27,19 +27,15 @@
         android:padding="20dp"
         android:background="@drawable/borde_vistappal">
 
-        <ImageView
-            android:id="@+id/imagenAmbiente1"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:scaleType="centerCrop"
-            android:layout_marginEnd="8dp" />
-
-        <ImageView
-            android:id="@+id/imagenAmbiente2"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:scaleType="centerCrop" />
-    </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerAmbientes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        android:clipToPadding="false"
+        tools:listitem="@layout/item_ambiente" />
+        />
+        </LinearLayout>
 
     <TextView
         android:id="@+id/tvComputo"
