--- a/app/src/main/res/layout/activity_vista_principal.xml
+++ b/app/src/main/res/layout/activity_vista_principal.xml
@@ -135,10 +135,11 @@
                     android:drawablePadding="8dp"
                     android:hint="Buscar..."
                     android:paddingStart="40dp"
-
                     android:paddingEnd="50dp"
                     android:textColor="@color/black"
                     android:textColorHint="@color/txt_color" />
+
+
 
                 <ImageView
                     android:id="@+id/ivFiltrar"
@@ -160,9 +161,8 @@
                 android:layout_marginEnd="10dp"
                 android:contextClickable="true"
                 android:layout_weight="1"
-                tools:listitem="@layout/item_rv_ambientes"
-
                 />
+<!--                tools:listitem="@layout/item_rv_ambientes"-->
         </LinearLayout>
 
         <TextView
