--- a/app/src/main/res/layout/activity_solicitud_reservas.xml
+++ b/app/src/main/res/layout/activity_solicitud_reservas.xml
@@ -8,12 +8,22 @@
     android:id="@+id/mainlySolicitudReservas">
 
 
+    <ImageButton
+        android:id="@+id/ibAtras"
+        android:background="@android:color/transparent"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/ic_flecha_volver"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:contentDescription="@string/txtVolver" />
+
     <TextView
         android:id="@+id/tvTitulo"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="15dp"
         android:text="@string/txtSolicitudReservas"
         android:textAlignment="center"
@@ -90,8 +100,8 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="15dp"
         android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textSize="18sp"/>
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
 
     <TextView
@@ -145,22 +155,11 @@
 
 
     <ImageButton
-        android:id="@+id/btnCancelar"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginHorizontal="210dp"
-        android:layout_marginTop="80dp"
-        android:backgroundTint="@color/colorBtnCancela"
-        android:textAlignment="center"
-        android:src="@drawable/ic_cancelar"
-        android:textColor="@color/white" />
-
-    <ImageButton
         android:id="@+id/btnGuardar"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginHorizontal="300dp"
-        android:layout_marginTop="-70dp"
+        android:layout_marginTop="10dp"
         android:backgroundTint="@color/colorBtns"
         android:textAlignment="center"
         android:src="@drawable/ic_guardar"
