--- a/app/src/main/res/layout/item_vistappal.xml
+++ b/app/src/main/res/layout/item_vistappal.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/transparente">
 
     <TextView
         android:id="@+id/tvNombreAmbiente"
@@ -25,7 +26,8 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:padding="20dp"
-        android:background="@drawable/borde_vistappal">
+        android:background="@drawable/borde_vistappal"
+        >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerAmbientes"
@@ -33,7 +35,8 @@
         android:layout_height="match_parent"
         android:padding="16dp"
         android:clipToPadding="false"
-        tools:listitem="@layout/item_ambiente" />
+        tools:listitem="@layout/item_ambiente"
+        android:backgroundTint="@color/blancohueso"/>
         />
         </LinearLayout>
 
@@ -66,7 +69,8 @@
             android:layout_height="match_parent"
             android:padding="16dp"
             android:clipToPadding="false"
-            tools:listitem="@layout/item_equipo" />
+            tools:listitem="@layout/item_equipo"
+            android:background="@color/transparente"/>
 
     </LinearLayout>
 
