Agregando funcionalidad de crear usuario

--- a/app/src/main/res/layout/activity_solicitud_reservas_equipo.xml
+++ b/app/src/main/res/layout/activity_solicitud_reservas_equipo.xml
@@ -142,7 +142,7 @@
         android:layout_marginStart="55dp">
 
         <CheckBox
-            android:id="@+id/checkMañana"
+            android:id="@+id/checkManana"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/Mañana"
