--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="colorBtnCancela">#A6A6A6</color>
     <color name="transparente">#00000000</color>
     <color name="gris">#ccc</color>
+    <color name="grisoscuro">#BAB1B1</color>
     <color name= "blancohueso">#F0F8FF</color>
     <color name= "rojo">#D32F2F</color>
 </resources>
